--- a/public/Payment/payment.html
+++ b/public/Payment/payment.html
@@ -138,7 +138,7 @@
 				<button class="button button-secondary">Return to Cart</button>
 			</div>
 			<div class="flex-end">
-				<button class="button button-primary" onclick="sendData()">Proceed</button>
+				<button class="button button-primary" >Proceed</button>
 			</div>
 		</div>
   </form>
